fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* ::-webkit-scrollbar {
+    height: 0 !important;
+    width: 0 !important;
+}
+
 .left {
     position: absolute;
     left: 0;
